demo push for bayezid
